base.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@400;700&display=swap');

/* BASE */

:root{
  --primary: #dc5cb4;
  --secondary: #ecdcbc;
  --tertiary: #a07fc9;
  --accent: #744c5c;
  --background: #3c3c4c;
  --shadow: rgba(0,0,0,0.3);
  --shade: rgba(0,0,0,0.8);
}

* {
  box-sizing: border-box;
}

html, button, input, select, textarea {
  font-family: 'Oswald', sans-serif;
  color: var(--secondary);
  font-size: 1.357em;
}


html {
  background: var(--background);
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

body {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

/* HEADER AREA */

header {
  display: flex;
  
  background: var(--primary);
  padding: 0.2em;
}

header > h1,
header i {
  text-shadow: 0.1rem 0.1rem 0.1rem var(--accent);
}

header > h1 {
  display: inline-block;
}

header > .button {
  padding: 0;
  box-shadow: none;
}

header > .button:hover {
  box-shadow: none;
}

header > .link:hover {
  color: var(--background);
}


/* MAIN AREA */

main {
  background: var(--accent);
  overflow: auto;
}


/* FOOTER AREA */

footer {
  background: var(--primary);
  padding: 0.2em;
  color: var(--background);
  font-weight: bold;
  display: flex;
  flex-wrap: wrap;
}

#footer-random-quote {
  flex: 1 0 50%;
  transition: opacity 1.2s ease-in-out;
}



footer .link {
  color: var(--background);
  text-decoration-color: var(--background);
}

footer .link:hover {
  color: var(--secondary);
}


/* BASIC ELEMENTS */

h1 {
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
}

h1, h2, h3 {
  font-family: 'Lobster', cursive;
  text-transform: capitalize;
  text-shadow: 0.1rem 0.1rem 0.1rem var(--shadow);
}

hr {
  border: 0;
  border-top: 0.2em dashed;
}

ul {
  padding-left: 1em;
  list-style: none;
}

li::before {
  content: "- ";
  font-weight: bold;
}

scrollbar,
::-webkit-scrollbar {
  height: 0.8em;
  width: 0.8em;
}

scrollbar-track,
::-webkit-scrollbar-track {
  background: var(--tertiary);
}

scrollbar-corner,
::-webkit-scrollbar-corner {
  background: var(--tertiary);
}
 
scrollbar-thumb,
::-webkit-scrollbar-thumb {
  background: var(--primary);
}

scrollbar-thumb:hover,
::-webkit-scrollbar-thumb:hover {
  background: var(--secondary);
}


/* BUILDING BLOCKS */

.button {
  display: inline-block;
  border: 0;
  border-radius: 0.5em;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0.5em 1em;
  text-decoration: none;
  box-shadow: 0.1rem 0.1rem 0.1rem var(--shadow);
  transition: color 0.2s, transform 0.1s, box-shadow 0.1s;
}

.button:hover {
  transform: translateY(-0.2rem) scale(1.02, 1.02);
  box-shadow: 0.2rem 0.2rem 0.2rem var(--shadow);
}

.button > .big {
  display: none;
}

.button-bright {
  background: var(--secondary);
  color: var(--background);
}

.button-tertiary {
  background: var(--tertiary);
  color: var(--secondary);
}

.button-transparent {
  border: 0;
  background: 0;
}

.link {
  text-decoration: underline dashed 0.15em;
  padding: 0.2em;
  transition: color 0.2s;
}

.link, .link:visited, .link:hover {
  color: unset;
}

.image {
  max-width: 100%;
  height: auto;
  display: block;
  border-radius: 0.5em;
}


/* HELPERS */

.to-left {
  float: left;
}

.to-right {
  float: right;
}

.to-bottom {
  position: absolute;
  bottom: 0px;
}

.flex-extend {
  flex: 1;
}

.center-text {
  text-align: center;
}

.center-content {
  display: flex;
  justify-content: center;
  align-items: center;
}

.center-content-vertical {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.text-left {
  text-align: left;
}

.transparent {
  opacity: 0;
}


/* MEDIA QUERIES */

/* regular css for mobile and tablet portrait */

/* mobile landscape */
@media
  screen and (orientation:landscape) and (min-width: 35.5em),
  screen and (min-width: 48em) {
  .button > .small {
    display: none;
  }

  .button > .big {
    display: block;
  }
  a.button > .big {
    display: inline;
  }
}

/* tablet */
@media screen and (min-width: 48em) {
  header {
    border-radius: 0 0 0.5em 0.5em;
  }

  main {
    margin: 1em;
    border-radius: 0.5em;
  }

  footer {
    border-radius: 0.5em 0.5em 0 0;
  }

  scrollbar-track,
  ::-webkit-scrollbar-track {
    border-radius: 0.5em;
  }
  
  scrollbar-corner,
  ::-webkit-scrollbar-corner {
    border-radius: 0.5em;
  }
   
  scrollbar-thumb,
  ::-webkit-scrollbar-thumb {
    border-radius: 0.5em;
  }
}

/* PC */
@media screen and (min-width: 80em) {
  body {
    top: 50vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    height: calc(100vh - 4em);
    width: calc(100vw - 12em);
  }

  header {
    border-radius: 1em 1em 0 0;
    padding: 0.8em;
  }

  main {
    margin: 1.5em 2em;
  }

  footer {
    border-radius: 0 0 1em 1em;
    padding: 0.8em;
  }
}


/* TOUCHSCREEN SPECIFIC MEDIA QUERIES */

@media (pointer:coarse) {
  .button:hover {
    transform: none;
  }
}

